--- a/client/src/components/Button.module.scss
+++ b/client/src/components/Button.module.scss
@@ -4,6 +4,7 @@
   font: inherit;
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
+  margin: 0 0.5rem;
   background-color: $accent-color;
   border: none;
   border-radius: 5px;
