--- a/client/src/pages/MonthlySpendingList.module.scss
+++ b/client/src/pages/MonthlySpendingList.module.scss
@@ -5,4 +5,16 @@
   max-width: 900px;
   padding: 0 1rem;
   width: 100%;
+  text-align: center;
+}
+
+.add-btn {
+  font-size: 4rem;
+  color: #ccc;
+  margin: 1rem 0;
+  cursor: pointer;
+}
+
+.add-btn:hover {
+  color: darkgray;
 }
