--- a/client/src/components/spending/SpendingCard.module.scss
+++ b/client/src/components/spending/SpendingCard.module.scss
@@ -40,6 +40,12 @@
     position: absolute;
     right: 2rem;
     bottom: 3rem;
+
+    a {
+      font-size: 1.5rem;
+      margin: 0 0.5rem;
+      color: #fff;
+    }
   }
 
   &-info {
