--- a/client/src/pages/Auth.module.scss
+++ b/client/src/pages/Auth.module.scss
@@ -2,7 +2,7 @@
 
 .auth {
   max-width: 35rem;
-  height: 45rem;
+  height: 50rem;
   overflow: hidden;
   background-color: #fff;
   border-radius: 10px;
@@ -10,27 +10,22 @@
   padding: 2rem 0;
   margin: 5rem auto 0;
 
-  .check {
-    display: none;
-  }
-
   .login {
-    position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
+
+    &-title {
+      color: $primary-color;
+      font-size: 2.5rem;
+      font-weight: 600;
+      margin: 2rem 0 3rem;
+    }
 
     &-form {
       display: flex;
       flex-direction: column;
       align-items: center;
-    }
-
-    &-label {
-      color: $primary-color;
-      font-size: 2.5rem;
-      font-weight: 600;
-      margin: 3rem 0;
     }
 
     &-input {
@@ -49,20 +44,26 @@
     width: 100%;
     background: $primary-color;
     border-radius: 60% / 10%;
-    transform: translateY(-72px);
+    transform: translateY(-100px);
     transition: 0.8s ease-in-out;
+    text-align: center;
+    padding-top: 3rem;
+
+    &-show {
+      transform: translateY(-410px);
+    }
+
+    &-title {
+      color: #fff;
+      font-size: 2.5rem;
+      font-weight: 600;
+      margin-bottom: 2rem;
+    }
 
     &-form {
       display: flex;
       flex-direction: column;
       align-items: center;
-    }
-
-    &-label {
-      color: #fff;
-      font-size: 2.5rem;
-      font-weight: 600;
-      margin: 3rem 0;
     }
 
     &-input {
@@ -73,15 +74,5 @@
       border: none;
       color: $primary-color;
     }
-  }
-
-  .check:checked ~ .signup {
-    transform: translateY(-330px);
-  }
-  .check:checked ~ .signup-label {
-    transform: scale(1);
-  }
-  .check:checked ~ .login-label {
-    transform: scale(0.6);
   }
 }
