--- a/client/src/pages/Auth.module.scss
+++ b/client/src/pages/Auth.module.scss
@@ -9,6 +9,7 @@
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
   padding: 2rem 0;
   margin: 2rem auto 0;
+  cursor: pointer;
 
   .login {
     width: 100%;
