--- a/client/src/components/UI/Header.module.scss
+++ b/client/src/components/UI/Header.module.scss
@@ -1,9 +1,11 @@
-@import "../../mixin.scss";
+@import '../../mixin.scss';
 
 .header {
   width: 100%;
   background-color: $primary-color;
   padding: 1rem;
+  display: flex;
+  justify-content: space-between;
 
   a {
     color: white;
