added the pie chart

--- a/client/src/mixin.scss
+++ b/client/src/mixin.scss
@@ -1,6 +1,6 @@
-$primary-color: #1c4d7b;
-$secondary-color: #598ec0;
-$accent-color: #c62e2e;
+$primary-color: #0081a7;
+$secondary-color: #00afb9;
+$accent-color: #f07167;
 
 @mixin media-xs {
   @media screen and (min-width: 320px) {
