--- a/client/src/pages/Auth.module.scss
+++ b/client/src/pages/Auth.module.scss
@@ -1,4 +1,4 @@
-@import "../mixin.scss";
+@import '../mixin.scss';
 
 .auth {
   max-width: 35rem;
@@ -8,7 +8,7 @@
   border-radius: 10px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
   padding: 2rem 0;
-  margin: 2rem auto 0;
+  margin: 5rem auto 0;
   cursor: pointer;
 
   .login {
