--- a/client/src/components/UI/Header.module.scss
+++ b/client/src/components/UI/Header.module.scss
@@ -29,9 +29,8 @@
   }
 
   a:hover {
-    transform: translateY(-0.25rem);
     color: white;
-    transition-duration: 300ms;
+    @include hover-effect;
   }
 }
 
