--- a/client/src/pages/NewSpending.module.scss
+++ b/client/src/pages/NewSpending.module.scss
@@ -1,6 +1,9 @@
-@import "../mixin.scss";
+@import '../mixin.scss';
+
+.container {
+  @include section-container;
+}
 
 .title {
   color: $primary-color;
 }
-
