--- a/client/src/pages/SpendingEdit.module.scss
+++ b/client/src/pages/SpendingEdit.module.scss
@@ -1,4 +1,8 @@
-@import "../mixin.scss";
+@import '../mixin.scss';
+
+.container {
+  @include section-container;
+}
 
 .title {
   color: $primary-color;
