updated NewSpending page

--- a/client/src/components/spending/SpendingForm.module.scss
+++ b/client/src/components/spending/SpendingForm.module.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap');
 @import '../../mixin.scss';
 
 .form {
@@ -18,6 +19,11 @@
     border: 1px solid $secondary-color;
     border-radius: 5px;
     color: $primary-color;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  &-error-message {
+    color: $accent-color;
   }
 
   &-buttons {
