--- a/client/src/components/spending/MonthFilter.module.scss
+++ b/client/src/components/spending/MonthFilter.module.scss
@@ -1,22 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap');
+
 @import '../../mixin.scss';
 
-.form {
-  display: flex;
-  flex-direction: column;
-  text-align: start;
-
-  &-label {
-    font-size: 1.8rem;
-    margin-top: 0.7rem;
-    margin-bottom: 0.5rem;
-    color: $secondary-color;
-  }
-
-  &-input {
-    font-size: 1.6rem;
-    padding: 0.5rem;
-    border: 1px solid $secondary-color;
-    border-radius: 5px;
-    color: $primary-color;
-  }
+.input {
+  font-size: 1.6rem;
+  padding: 0.5rem;
+  border: 1px solid $secondary-color;
+  border-radius: 5px;
+  color: $primary-color;
+  font-family: 'Poppins', sans-serif;
 }
