--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,38 +15,39 @@ html {
 
 main {
   padding: 2rem;
+  height: auto;
 }
 
 h1 {
   font-weight: 800;
-  font-size: 3rem;
+  font-size: 2.5rem;
+
+  @include media-xs {
+    font-size: 3rem;
+  }
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 2rem;
 
   @include media-xs {
     font-size: 2.5rem;
   }
 }
 
-h2 {
-  font-weight: 600;
-  font-size: 2.5rem;
+h3 {
+  font-weight: 400;
+  font-size: 1.5rem;
 
   @include media-xs {
     font-size: 2rem;
   }
 }
 
-h3 {
-  font-weight: 400;
-  font-size: 2rem;
-
-  @include media-xs {
-    font-size: 1.5rem;
-  }
-}
-
 p {
   font-weight: 400;
-  font-size: 1.6rem;
+  font-size: 1rem;
 
   @include media-xs {
     font-size: 1.2rem;
